--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.hero {
+  /* background-image: url('/images/vendor-2.jpeg'); */
+  height: 440px;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('/images/vendor-2.jpeg');
+  /* height: 100%; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
