--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,7 @@ a {
   background-size: cover;
 }
 
+.header-container {
+  background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(247,37,133,1) 50%, rgba(252,176,69,1) 100%);
+}
