--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,13 @@
+:root {
+  --light-pink: #f6eaf5;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: 'Cabin', sans-serif!important;
+  background-color: var(--light-pink);
 }
 
 a {
