--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Cabin', sans-serif!important;
-  background-color: var(--light-pink);
+  background-color: var(--light-pink)!important;
 }
 
 a {
